[package]
name = "wifiscanner"
version = "0.6.1"
authors = ["Mark Sta Ana <booyaabooyaabooyaa@gmail.com>"]
description = "List WiFi hotspots in your area"
repository = "https://github.com/booyaa/wifiscanner"
documentation = "https://docs.rs/wifiscanner"
readme = "README.md"
keywords = ["wifi","hotspots","network"]
license = "Apache-2.0"
edition = "2021"

[[bin]]
name = "wifiscanner"

[dependencies]
regex = "1"
itertools = "0.11"
anyhow = "1.0.86"
serde = { version = "1.0.204", features = ["derive"] }

[target."cfg(target_os = \"macos\")".dependencies]
serde_json = "1.0.121"
